Customize query by project and execute it

--- a/app/views/settings/_configure.html.erb
+++ b/app/views/settings/_configure.html.erb
@@ -3,7 +3,7 @@
   <tr>
     <th><%= l :field_db_url %>:</th>
     <td>
-      <input required type="url" size=60 id="db_url"
+      <input required type="text" size=60 id="db_url"
              value="<%= settings['db_url'] %>"
              name="settings[db_url]" >
     </td>
